tests/reject/errorAvocadoNoErrorBlock.emojic
🐇 🐟 🍇
  🐇❗️ 🤦‍♂️ ➡️ 🔡 🚧🚧 🍇
    🚨🆕🚧🔤Too low on charge🔤❗️
  🍉
🍉

🏁 🍇
  🆗 a 🙋🐇🐟❗️ 🍇
    😀 a ❗️
  🍉
  🙅 error 🍇
    😀 🔤An error occured: 🧲💬error❗️🧲🔤 ❗️
  🍉
🍉
